--- a/wp-content/themes/cae/assets/scss/partials/_footer.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_footer.scss
@@ -165,7 +165,7 @@
 		text-align: right !important;
 		border-top:1px solid $accentLight;
 		margin-top: 1em;
-		padding: .5em 15px;
+		padding: .5em 15px !important;
 		h2 {
 			font-size:26px;
 		}
